--- a/assets/stylesheets/prettify-js.css
+++ b/assets/stylesheets/prettify-js.css
@@ -59,6 +59,7 @@ body > div.container {
 	padding-bottom: 40px;
 }
 
+
 .code-language {
 	padding-top: 100px;
 }
@@ -85,6 +86,15 @@ body > div.container {
 
 .navbar .nav > li > a {
 	font-size: 20px;
+}
+
+.page-header {
+	//margin: inherit;
+	padding-bottom: 10px;	
+}
+
+.page-header p {
+	font-size: 1.2em;
 }
 
 .section-inner {
