--- a/assets/stylesheets/prettify-js.css
+++ b/assets/stylesheets/prettify-js.css
@@ -56,7 +56,8 @@ body > div.container {
 	background-color: rgba(255,255,255,0.5);
 	padding: 20px;
 	padding-top: 100px;
-	padding-bottom: 40px;
+	padding-bottom: 20px;
+	margin-bottom: 550px;	
 }
 
 
@@ -72,7 +73,7 @@ body > div.container {
 }
 
 .footer {
-	padding-bottom: 550px;
+	padding-bottom: 20px;
 }
 
 .jumbotron p {
