--- a/assets/stylesheets/prettify-js.css
+++ b/assets/stylesheets/prettify-js.css
@@ -120,6 +120,14 @@ body > div.container {
 	padding: 20px;
 }
 
+.masthead .btn-primary small {
+	color: #FFFFFF;
+	display: inline-block;
+	padding: 5px;
+	padding-left: 10px;
+	vertical-align: text-top;
+}
+
 .navbar .nav > li > a {
 	font-size: 20px;
 }
