--- a/assets/stylesheets/prettify-js.css
+++ b/assets/stylesheets/prettify-js.css
@@ -85,6 +85,11 @@ body > div.container {
 	text-align: center;
 }
 
+.banner pre.prettyprint {
+	border-radius: 5px 5px 5px 5px;
+	margin-bottom: 0;
+}
+
 .bs-links {
 	background-color: rgba(255,255,255,0.5);
 	padding: 5px;
