--- a/assets/stylesheets/prettify-js.css
+++ b/assets/stylesheets/prettify-js.css
@@ -45,11 +45,12 @@ figure.code figcaption {
 
 section {
 	padding-top: 50px;
-	opacity: 0.9;
+	//opacity: 0.9;
 }
 
 pre.prettyprint {
 	margin-bottom: inherit;
+	font-size: 16px;	
 }
 
 body > div.container {
@@ -76,7 +77,7 @@ body > div.container {
 }
 
 #steps pre:hover {
-	opacity: 0.8;
+	//opacity: 0.9;
 }
 
 #steps .label,
@@ -86,7 +87,7 @@ body > div.container {
 }
 
 .banner pre.prettyprint {
-	border-radius: 5px 5px 5px 5px;
+	//border-radius: 5px 5px 5px 5px;
 	margin-bottom: 0;
 }
 
