--- a/assets/themes/google-code-light/prettify.scss
+++ b/assets/themes/google-code-light/prettify.scss
@@ -142,8 +142,11 @@
 		}
 	}
 	
-	ol.linenums li { 
-		color: #888; 
+	ol.linenums li {
+		color: #BEBEC5;
+		line-height: 18px;
+		padding-left: 12px;
+		text-shadow: 0 1px 0 #FFFFFF;	
 	}
 	
 	li.L0,
