--- a/assets/themes/google-code-light/prettify.scss
+++ b/assets/themes/google-code-light/prettify.scss
@@ -136,10 +136,7 @@
 
 	/* Specify class=linenums on a pre to get line numbering */
 	ol.linenums {
-		margin: { 
-			top: 0; 
-			bottom: 0; 
-		}
+		margin: 0 0 0 33px;
 	}
 	
 	ol.linenums li {
