--- a/assets/themes/sons-of-obsidian-dark/prettify.css
+++ b/assets/themes/sons-of-obsidian-dark/prettify.css
@@ -1,109 +1,89 @@
-.str
-{
-    color: #EC7600;
-}
-.kwd
-{
-    color: #93C763;
-}
-.com
-{
-    color: #555555;
-}
-.typ
-{
-    color: #678CB1;
-}
-.lit
-{
-    color: #FACD22;
-}
-.pun
-{
-    color: #F1F2F3;
-}
-.pln
-{
-    color: #F1F2F3;
-}
-.tag
-{
-    color: #8AC763;
-}
-.atn
-{
-    color: #E0E2E4;
-}
-.atv
-{
-    color: #EC7600;
-}
-.dec
-{
-    color: purple;
-}
-pre.prettyprint
-{
-    border: 0px solid #888;
-    background-color: #111111;
-}
-ol.linenums
-{
-    margin-top: 0;
-    margin-bottom: 0;
-}
-li.L0, li.L1, li.L2, li.L3, li.L4, li.L5, li.L6, li.L7, li.L8, li.L9
-{
-    color: #555555;
-}
-li.L1, li.L3, li.L5, li.L7, li.L9
-{
-    background: #111111;
-}
-@media print
-{
-    .str
-    {
-        color: #060;
-    }
-    .kwd
-    {
-        color: #006;
-        font-weight: bold;
-    }
-    .com
-    {
-        color: #600;
-        font-style: italic;
-    }
-    .typ
-    {
-        color: #404;
-        font-weight: bold;
-    }
-    .lit
-    {
-        color: #044;
-    }
-    .pun
-    {
-        color: #440;
-    }
-    .pln
-    {
-        color: #000;
-    }
-    .tag
-    {
-        color: #006;
-        font-weight: bold;
-    }
-    .atn
-    {
-        color: #404;
-    }
-    .atv
-    {
-        color: #060;
-    }
-}
+/* Pretty printing styles. Used with prettify.js.
+ *
+ * This version is slight modified based on the original version.
+ *
+ * Name:	Stanley Ng
+ * Email: 	stanleyhlng@googlegroups.com
+ * 
+ * Reference:
+ * http://code.google.com/p/google-code-prettify/source/browse/trunk/src/prettify.css
+ */
+.pln {
+  color: #F1F2F3; }
+
+.str {
+  color: #EC7600; }
+
+.kwd {
+  color: #93C763; }
+
+.com {
+  color: #555555;
+  font-style: italic; }
+
+.typ {
+  color: #678CB1; }
+
+.lit {
+  color: #FACD22; }
+
+.pun {
+  color: #F1F2F3; }
+
+.opn {
+  color: #F1F2F3; }
+
+.clo {
+  color: #F1F2F3; }
+
+.tag {
+  color: #8AC763; }
+
+.atn {
+  color: #E0E2E4; }
+
+.atv {
+  color: #EC7600; }
+
+.dec {
+  color: purple; }
+
+.var {
+  color: #ff9da4; }
+
+.fun {
+  color: #bbdaff; }
+
+/* Put a border around prettyprinted code snippets. */
+pre.prettyprint {
+  background-color: #111111;
+  padding: 10px;
+  border: 1px solid #E1E1E8; }
+
+/* Specify class=linenums on a pre to get line numbering */
+ol.linenums {
+  color: #7285b7;
+  margin: 0 0 0 40px; }
+
+ol.linenums li {
+  line-height: 18px;
+  padding-left: 12px; }
+
+ol.linenums li.L0,
+ol.linenums li.L1,
+ol.linenums li.L2,
+ol.linenums li.L3,
+ol.linenums li.L4,
+ol.linenums li.L5,
+ol.linenums li.L6,
+ol.linenums li.L7,
+ol.linenums li.L8,
+ol.linenums li.L9 {
+  color: #555555; }
+
+ol.linenums li.L1,
+ol.linenums li.L3,
+ol.linenums li.L5,
+ol.linenums li.L7,
+ol.linenums li.L9 {
+  background: #111111; }
