--- a/assets/themes/google-code-light/prettify.scss
+++ b/assets/themes/google-code-light/prettify.scss
@@ -5,7 +5,7 @@
  * Name:	Stanley Ng
  * Email: 	stanleyhlng@googlegroups.com
  * 
- * Reference:
+ * Credits:
  * http://code.google.com/p/google-code-prettify/source/browse/trunk/src/prettify.css
  */
 
