--- a/assets/themes/tomorrow-night-blue/prettify.scss
+++ b/assets/themes/tomorrow-night-blue/prettify.scss
@@ -3,6 +3,8 @@
  * Name:	Stanley Ng
  * Email: 	stanleyhlng@googlegroups.com
  * 
+ * Credits:
+ * https://github.com/chriskempson/tomorrow-theme
  */
 
 @mixin comment {
